Relevant users in admins and no current user in contacts WIP
